--- a/web-app-performance/web-app-performance.csproj
+++ b/web-app-performance/web-app-performance.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
